# imageGenV0

./: .gitignore  BACKLOG.md  BUG1_FINDINGS.md  CONTRIBUTING.md  DECISIONS.md  FEEDBACK.md  HANDOFF_BUG3.md  LABEL_FIT_PLAN.md  LAYOUT_BUGS_PLAN.md  LIMITATIONS.md  PLAN.md  PLAN_phase6_step2.md  README.md  ROADMAP.md  SKILL.md  TODO.md  V3_FEATURES.md  WORKFLOW.md  WORKFLOW_HABITS.md  imgGenv2.md  plan-phase8.md  pyproject.toml
imageGen/: __init__.py  __main__.py
imageGenV0/: __init__.py  __main__.py
ir/: __init__.py
layout/: __init__.py  _geom.py  label_placement.py  panel_layout.py  pathway_layout.py  reaction_layout.py  types.py
primitives/: arrows.py  cells.py  chemistry.py  lab_equipment.py  membranes.py  nucleic_acids.py  proteins.py
render/: compositor.py  export.py
styles/: acs.json  cell_press.json  loader.py
tests/: _helpers.py  test_cli.py  test_crop.py  test_dynamic_canvas.py  test_end_to_end.py  test_extlabel_leaders.py  test_geom.py  test_golden_images.py  test_ir_builder.py  test_ir_schema.py  test_label_placement_fallback.py  test_label_shaft_avoidance.py  test_layout_label_placement.py  test_layout_layered.py  test_layout_nucleic.py  test_layout_panel.py  test_layout_pathway.py  test_layout_reaction.py  test_layout_ring.py  test_primitives_arrows.py  test_primitives_cells.py  test_primitives_chemistry.py  test_primitives_glyphs.py  test_primitives_lab_equipment.py  test_primitives_membranes.py  test_primitives_nucleic_acids.py  test_primitives_proteins.py  test_primitives_text.py  test_receptor_label_footprint.py  test_relation_arrows.py  (+9 more)
(+64 files in other folders)
